[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[project]
name = "PyOPL"
version = "1.4"
description = "OPL2/3 Adlib emulation"
readme = "README.md"
requires-python = ">=2.7"
license = { file = "COPYING" }
authors = [
    { name = "Adam Nielsen", email = "malvineous@shikadi.net" },
    { name = "Adam Biser" }
]
maintainers = [
    { name = "Laurence Dougal Myers", email = "laurencedougalmyers@gmail.com" }
]
keywords = ["Adlib", "FM", "OPL", "OPL2", "OPL3", "YM3812", "YMF262"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Operating System :: OS Independent",
    "Programming Language :: C++",
    "Topic :: Multimedia :: Sound/Audio :: Sound Synthesis"
]

[project.urls]
Repository = "http://www.github.com/Malvineous/pyopl"
