[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[project]
name = "PyOPL"
version = "2.0"
description = "OPL2/3 Adlib emulation"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "GPL-3.0-only" }
authors = [
    { name = "Adam Nielsen", email = "malvineous@shikadi.net" },
    { name = "Adam Biser", email = "adambiser@gmail.com" }
]
maintainers = [
    { name = "Laurence Dougal Myers", email = "laurencedougalmyers@gmail.com" }
]
keywords = ["Adlib", "FM", "OPL", "OPL2", "OPL3", "YM3812", "YMF262"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: C++",
    "Topic :: Multimedia :: Sound/Audio :: Sound Synthesis"
]

[project.urls]
Repository = "http://www.github.com/Malvineous/pyopl"

[tool.cibuildwheel]
test-command = [
    "cd {project}",
    "python -m unittest {project}/tests/pyopl_test.py"
]

[tool.cibuildwheel.windows]

test-command = [
    "D:",
    "cd {project}",
    "python -m unittest {project}/tests/pyopl_test.py"
]
